--- a/02_web/HTML/05_table.html
+++ b/02_web/HTML/05_table.html
@@ -7,6 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table {
+            width: 100%;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #444444;
+            padding: 10px;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Table</h1>
