--- a/02_web/Bootstrap/practice/shop.html
+++ b/02_web/Bootstrap/practice/shop.html
@@ -1,48 +1,103 @@
 <!-- shop.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./shop.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <title>Document</title>
 </head>
+
 <body>
-  <nav class="sticky-top ">
-    <div>SAMSUNG</div>
+  <nav class="d-flex justify-content-between p-3 bg-dark text-white sticky-top">
+    <div class="fs-5 fw-bold">SAMSUNG</div>
     <div>
-      <a href="#">Contact</a>
-      <a href="#">Cart</a>
-      <a href="#">Login</a>
+      <a href="#" class="text-decoration-none text-white me-2">Contact</a>
+      <a href="#" class="text-decoration-none text-white me-2">Cart</a>
+      <a href="#" class="text-decoration-none text-white me-2">Login</a>
     </div>
   </nav>
 
   <header>
-    <img src="./images/main.png" alt="main image">
+    <img class="img-fluid" src="./images/main.png" alt="main image">
   </header>
 
-  <section>
-    <div>Our New Products</div>
-    <div class="row">
+  <section class="container text-center">
+    <div class="fs-5 fw-bold py-5">Our New Products</div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 ">
 
-      <article>
-        <img src="./images/buds.jpg" alt="galaxy buds image">
-        <div>
-          <div>Galaxy Buds</div>
-          <div>123,456</div>
+      <article class="card col">
+        <!-- <article class="col-12 col-md-6 col-lg-3 card"> -->
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
         </div>
       </article>
+
+      <article class="card col">
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
+        </div>
+      </article>
+
+      <article class="card col">
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
+        </div>
+      </article>
+      
+      <article class="card col">
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
+        </div>
+      </article>
+
+      <article class="card col">
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
+        </div>
+      </article>
+
+      <article class="card col">
+        <img src="./images/buds.jpg" alt="galaxy buds image" class="card-img-top">
+        <div class="card-body">
+          <div class="card-title fw-bold">Galaxy Buds</div>
+          <div class="card-text">123,456</div>
+        </div>
+      </article>
+
 
     </div>
   </section>
 
-  <footer>
+  <footer class="d-flex justify-content-center py-5">
     <a href="#">
-      <img src="./images/facebook.png" alt="facebook icon">
+      <img class="mx-4 sns-icon" src="./images/facebook.png" alt="facebook icon">
+    </a>
+    <a href="#">
+      <img class="mx-4 sns-icon" src="./images/instagram.png" alt="instagram icon">
+    </a>
+    <a href="#">
+      <img class="mx-4 sns-icon" src="./images/twitter.png" alt="twitter icon">
     </a>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
